# aiovodafone

./: .all-contributorsrc  .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  library_test.py  package-lock.json  package.json  pyproject.toml  renovate.json  ruff.toml  setup.py
.devcontainer/: devcontainer.json
.devcontainer/python_310/: Dockerfile  devcontainer.json
.devcontainer/python_311/: Dockerfile  devcontainer.json
.devcontainer/python_312/: Dockerfile  devcontainer.json
.github/: dependabot.yml  labels.toml
.github/workflows/: ci.yml  issue-manager.yml  labels.yml  poetry-upgrade.yml
docs/: example_http_redirect_login.html  example_https_login.html  script_grab.py
js/: -payload-decrypted.json  -payload.json  -sercomm-extracted-code.js  0-working-sjcl-decrypt.js  0-working-sjcl-decrypt.py  2-test-sjcl-encrypt.js  login.js  mainFrame.js  mainFunctions.js  multi_lang.js  pageLoadFunctions.js  sha.js  sjcl-beautified.js  sjcl.js
scripts/: cleanup.sh  get-pyproject-uv.version.sh  renovate-config-validator.sh  setup.sh
src/aiovodafone/: __init__.py  api.py  const.py  exceptions.py  sjcl.py
src/aiovodafone/models/: __init__.py  aaa.json  abcdef.py  compare  homeware.py  sercomm.py  set_wifi.json  srp.py  technicolor.py  technicoloruk.py  ultrahub.py
src/aiovodafone/util/: __init__.py  technicolor_srp.py
tests/: __init__.py  conftest.py  test_api_base.py  test_homeware.py  test_init.py  test_main.py  test_models_init.py  test_sercomm.py  test_sjcl.py  test_technicolor.py  test_ultrahub.py
tests/fixtures/sercomm/: RHG3006_v1_XF6_4.0.05.09.json  RHG3006_v2_XF6_4.0.05.09.json  VOX30_v1_XS_4.1.00.16.json  no_model_name_v1_XS6_4.2.00.12.json
tests/fixtures/sjcl/: sercomm.json  ultrahub.json
tests/fixtures/ultrahub/: wifi_data.json
