[tool.poetry]
name = "aiovodafone"
version = "0.6.1"
description = "Python library to control Vodafone Station"
authors = ["Simone Chemelli <simone.chemelli@gmail.com>"]
readme = "README.md"
repository = "https://github.com/chemelli74/aiovodafone"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
]
packages = [
    { include = "aiovodafone", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chemelli74/aiovodafone/issues"
"Changelog" = "https://github.com/chemelli74/aiovodafone/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "*"
beautifulsoup4 = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^5.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["src/aiovodafone/__init__.py:__version__",]
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore*",
    "ci*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=aiovodafone --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.ruff.isort]
known-first-party = ["aioamazondevices", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
